--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1,user-scalable=no"><title>Loading Bar</title><style>*{margin:0;padding:0}body{background:#0a0a0f;color:#fff;font:16px system-ui;overflow:hidden;touch-action:none;user-select:none;height:100vh;display:flex;flex-direction:column}#g{flex:1;position:relative;background:linear-gradient(180deg,#1a1a2e 0%,#0a0a0f 100%)}#p{position:absolute;bottom:30px;left:0;width:120px;height:24px;background:linear-gradient(90deg,#00ff88,#00ccff);border-radius:4px;box-shadow:0 0 20px rgba(0,255,136,.5);transition:left .08s linear}.e{position:absolute;color:#ff4444;font:bold 10px monospace;text-shadow:0 0 4px red}.b{position:absolute;bottom:0;left:0;height:4px;background:linear-gradient(90deg,#00ff88,#00ccff);transition:width .1s}#b{position:absolute;bottom:0;left:0;right:0;height:4px}#u{position:absolute;top:0;right:0;bottom:0;width:0;background:rgba(0,0,0,.4);pointer-events:none}#t{position:absolute;top:8px;left:0;right:0;text-align:center;font-size:14px;opacity:.9}#s{position:absolute;bottom:56px;left:0;right:0;text-align:center;font-size:12px;opacity:.6}</style></head><body><div id=g><div id=p></div><div id=u></div><div id=b><div class=b style=width:0></div></div><div id=t>0%</div><div id=s>Tap left/right to dodge errors</div></div><script>
+<!DOCTYPE html><html><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1,user-scalable=no"><title>Loading Bar</title><style>*{margin:0;padding:0}body{background:#0a0a0f;color:#fff;font:16px system-ui;overflow:hidden;touch-action:none;user-select:none;height:100vh;display:flex;flex-direction:column}#g{flex:1;position:relative;background:linear-gradient(180deg,#1a1a2e 0%,#0a0a0f 100%)}#p{position:absolute;bottom:30px;left:0;width:10%;height:24px;background:linear-gradient(90deg,#00ff88,#00ccff);border-radius:4px;box-shadow:0 0 20px rgba(0,255,136,.5);transition:left .08s linear}.e{position:absolute;color:#ff4444;font:bold 10px monospace;text-shadow:0 0 4px red}.b{position:absolute;bottom:0;left:0;height:4px;background:linear-gradient(90deg,#00ff88,#00ccff);transition:width .1s}#b{position:absolute;bottom:0;left:0;right:0;height:4px}#u{position:absolute;top:0;right:0;bottom:0;width:0;background:rgba(0,0,0,.4);pointer-events:none}#t{position:absolute;top:8px;left:0;right:0;text-align:center;font-size:14px;opacity:.9}#s{position:absolute;bottom:56px;left:0;right:0;text-align:center;font-size:12px;opacity:.6}</style></head><body><div id=g><div id=p></div><div id=u></div><div id=b><div class=b style=width:0></div></div><div id=t>0%</div><div id=s>Tap left/right to dodge errors</div></div><script>
 (function(){
 var g=document.getElementById('g'),p=document.getElementById('p'),u=document.getElementById('u'),b=document.querySelector('.b'),t=document.getElementById('t'),s=document.getElementById('s');
 var px,errors=[],prog=0,spawn=0,run=1;function dim(){var w=g.offsetWidth||innerWidth,h=g.offsetHeight||innerHeight;return{w:w,h:h}}var W=dim().w,H=dim().h;px=0;
@@ -6,7 +6,7 @@ function rnd(a,b){return a+Math.random()*(b-a)}
 function tick(){
 if(!run)return;var d=dim();W=d.w;H=d.h;
 prog+=.04;spawn++;
-var loaded=W*(prog/100),minPx=0,maxPx=Math.max(0,loaded-120);
+var pw=W*.1,loaded=W*(prog/100),minPx=0,maxPx=Math.max(0,loaded-pw);
 if(spawn>Math.max(12,55-prog*.45)){spawn=0;var el=document.createElement('div');el.className='e';el.textContent='ERR';g.appendChild(el);errors.push({x:rnd(5,Math.max(15,loaded-35)),y:-20,el:el})}
 px=Math.max(minPx,Math.min(maxPx,px));
 p.style.left=px+'px';
@@ -18,11 +18,11 @@ for(var i=errors.length-1;i>=0;i--){
 var e=errors[i];e.y+=sp;
 e.el.style.left=e.x+'px';e.el.style.top=e.y+'px';
 if(e.y>H-60){e.el.remove();errors.splice(i,1);continue}
-if(e.y+20>H-55&&e.y<H-30&&e.x+40>px&&e.x<px+120){run=0;t.textContent='Crashed!';s.textContent='Tap to retry';errors.forEach(function(x){x.el.remove()});errors=[];return}}
+if(e.y+20>H-55&&e.y<H-30&&e.x+40>px&&e.x<px+pw){run=0;t.textContent='Crashed!';s.textContent='Tap to retry';errors.forEach(function(x){x.el.remove()});errors=[];return}}
 requestAnimationFrame(tick)}
 function move(e){
-var x=e.touches?e.touches[0].clientX:e.clientX;
-px=x-60}
+var r=g.getBoundingClientRect(),x=(e.touches?e.touches[0].clientX:e.clientX)-r.left;
+px=x-r.width*.05}
 g.addEventListener('touchstart',function(e){if(!run){prog=0;errors=[];run=1;g.querySelectorAll('.e').forEach(function(x){x.remove()});tick();s.textContent='Tap left/right to dodge'}else move(e)});
 g.addEventListener('touchmove',function(e){e.preventDefault();move(e)});
 g.addEventListener('mousedown',function(e){if(!run){prog=0;errors=[];run=1;g.querySelectorAll('.e').forEach(function(x){x.remove()});tick();s.textContent='Tap left/right to dodge'}else move(e)});
