--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
-<!DOCTYPE html><html><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1,user-scalable=no"><title>Shadow Puppet Arena</title><style>*{margin:0;padding:0}body{background:#0d0d12;color:#e0e0e0;font:14px sans-serif;overflow:hidden;height:100vh;display:flex;flex-direction:column;align-items:center;justify-content:center}#lobby{text-align:center;padding:15px}#lobby input,#lobby button{font-size:16px;padding:10px;margin:5px;border-radius:6px;border:1px solid #444}#lobby button{background:#4a2d8e;color:#fff;cursor:pointer}#qr{display:none;margin:10px;background:#fff;padding:8px;border-radius:8px}#c{background:#1a1a24;border-radius:8px;display:none;cursor:crosshair;max-width:95vw;max-height:40vh}#ui{display:none;padding:10px;text-align:center}#ui input,#ui button{font-size:14px;padding:8px;margin:4px;border-radius:6px;border:1px solid #444}#ui button{background:#4a2d8e;color:#fff}#arena{display:none;width:100%;flex:1;flex-direction:column;align-items:center;padding-top:10px}#ac{background:#1a1a24;border-radius:8px;max-width:100%;max-height:60vh}#qrDraw{display:none;margin:5px}#log{font-size:11px;color:#aaa;max-height:80px;overflow-y:auto;width:90%;text-align:left;padding:6px;background:#151520;border-radius:6px;margin-top:6px}</style></head><body><div id=lobby><h1>🦇 Shadow Puppet Arena</h1><p style=margin:8px>Draw a monster. Up to 6 players!</p><button id=create>Create Game</button><br><input id=code placeholder="Room code" maxlength=4 style=text-transform:uppercase><button id=join>Join</button><div id=qr></div><p id=msg style=margin-top:15px;color:#888>Connecting...</p></div><div id=ui style=display:none><p id=room>Room: ---</p><div id=qrDraw></div><p id=count></p><input id=mname placeholder="Name your monster" maxlength=12><br><canvas id=c width=240 height=240></canvas><p id=drawStatus style=margin:8px>Draw your monster</p><button id=done>Ready!</button><button id=unready style=display:none;background:#666>Unready</button></div><div id=arena><canvas id=ac width=640 height=480></canvas><div id=log></div></div><script>
+<!DOCTYPE html><html><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1,user-scalable=no"><title>Shadow Puppet Arena</title><style>*{margin:0;padding:0}body{background:#0d0d12;color:#e0e0e0;font:14px sans-serif;overflow:hidden;height:100vh;display:flex;flex-direction:column;align-items:center;justify-content:center}#lobby{text-align:center;padding:15px}#lobby input,#lobby button{font-size:16px;padding:10px;margin:5px;border-radius:6px;border:1px solid #444}#lobby button{background:#4a2d8e;color:#fff;cursor:pointer}#qr{display:none;margin:10px;background:#fff;padding:8px;border-radius:8px}#c{background:#1a1a24;border-radius:8px;display:none;cursor:crosshair;max-width:95vw;max-height:50vh;border:2px solid #333}#ui{display:none;padding:10px;text-align:center}#ui input,#ui button{font-size:14px;padding:8px;margin:4px;border-radius:6px;border:1px solid #444}#ui button{background:#4a2d8e;color:#fff}#arena{display:none;width:100%;flex:1;flex-direction:column;align-items:center;padding-top:10px}#ac{background:#1a1a24;border-radius:8px;max-width:100%;max-height:60vh}#qrDraw{display:none;margin:5px}#log{font-size:11px;color:#aaa;max-height:80px;overflow-y:auto;width:90%;text-align:left;padding:6px;background:#151520;border-radius:6px;margin-top:6px}</style></head><body><div id=lobby><h1>🦇 Shadow Puppet Arena</h1><p style=margin:8px>Draw a monster. Up to 6 players!</p><button id=create>Create Game</button><br><input id=code placeholder="Room code" maxlength=4 style=text-transform:uppercase><button id=join>Join</button><div id=qr></div><p id=msg style=margin-top:15px;color:#888>Connecting...</p></div><div id=ui style=display:none><p id=room>Room: ---</p><div id=qrDraw></div><p id=count></p><input id=mname placeholder="Name your monster" maxlength=12><br><canvas id=c width=300 height=300></canvas><p id=drawStatus style=margin:8px>Draw your monster</p><button id=done>Ready!</button><button id=unready style=display:none;background:#666>Unready</button></div><div id=arena><canvas id=ac width=640 height=480></canvas><div id=log></div></div><script>
 (function(){
 var lobby=document.getElementById('lobby'),ui=document.getElementById('ui'),arena=document.getElementById('arena'),c=document.getElementById('c'),ac=document.getElementById('ac'),msg=document.getElementById('msg'),room=document.getElementById('room'),count=document.getElementById('count'),qr=document.getElementById('qr'),done=document.getElementById('done'),unready=document.getElementById('unready'),log=document.getElementById('log');
-var W=240,H=240,path=[],playerId=0,monsters={},ws,isReady=false,bounds=[0,0,640,480];
+var W=300,H=300,path=[],playerId=0,monsters={},ws,isReady=false,bounds=[0,0,640,480];
 var WS_URL=(location.protocol==='https:'?'wss:':'ws:')+'//'+(location.host||'localhost:3000');
 var retries=0;
 function post(m){msg.textContent=m;msg.style.color='#888'}
@@ -35,18 +35,17 @@ var sym=Math.min(1,1-Math.abs(left-right)/(left+right+1));
 var segs=[];for(var i=1;i<pts.length;i++)segs.push(Math.hypot(pts[i].x-pts[i-1].x,pts[i].y-pts[i-1].y));
 var avg=segs.reduce(function(a,b){return a+b},0)/segs.length;var legs=0;for(var i=0;i<segs.length;i++)if(segs[i]>avg*1.8)legs++;
 var mx=1e9,my=1e9,Mx=0,My=0;for(var i=0;i<pts.length;i++){mx=Math.min(mx,pts[i].x);my=Math.min(my,pts[i].y);Mx=Math.max(Mx,pts[i].x);My=Math.max(My,pts[i].y)}
-var sw=Mx-mx||1,sh=My-my||1,sc=Math.min(180/sw,180/sh),ox=120-(mx+Mx)/2*sc,oy=120-(my+My)/2*sc;
+var sw=Mx-mx||1,sh=My-my||1,sc=Math.min(220/sw,220/sh),ox=150-(mx+Mx)/2*sc,oy=150-(my+My)/2*sc;
 var p=[];var ns=Math.min(pts.length,20);for(var i=0;i<ns;i++){var j=Math.floor(i*(pts.length-1)/(ns-1));p.push([Math.round((pts[j].x*sc+ox)/12),Math.round((pts[j].y*sc+oy)/12)])}
 return{a:area,c:corners,s:sym,l:legs,p:p,n:(document.getElementById('mname').value||'???').slice(0,12)}}
 function drawMonster(){
 var ctx=c.getContext('2d'),pts=path;
 if(pts.length<3)return null;
 ctx.fillStyle='#1a1a24';ctx.fillRect(0,0,W,H);
-ctx.fillStyle='#fff';ctx.beginPath();ctx.moveTo(pts[0].x,pts[0].y);for(var i=1;i<pts.length;i++)ctx.lineTo(pts[i].x,pts[i].y);ctx.closePath();ctx.fill();
+ctx.fillStyle='#fff';ctx.beginPath();ctx.moveTo(pts[0].x,pts[0].y);for(var i=1;i<pts.length;i++)ctx.lineTo(pts[i].x,pts[i].y);ctx.closePath();ctx.fill('nonzero');
 var stats=analyze();
 ctx.fillStyle='#1a1a24';ctx.fillRect(0,0,W,H);
-ctx.fillStyle='#6a4c93';ctx.beginPath();ctx.moveTo(pts[0].x,pts[0].y);for(var i=1;i<pts.length;i++)ctx.lineTo(pts[i].x,pts[i].y);ctx.closePath();ctx.fill();
-ctx.strokeStyle='#9b7bcf';ctx.lineWidth=2;ctx.stroke();
+ctx.fillStyle='#6a4c93';ctx.beginPath();ctx.moveTo(pts[0].x,pts[0].y);for(var i=1;i<pts.length;i++)ctx.lineTo(pts[i].x,pts[i].y);ctx.closePath();ctx.fill('nonzero');
 var name=document.getElementById('mname').value||'';
 if(name){ctx.fillStyle='#fff';ctx.font='bold 14px sans-serif';ctx.textAlign='center';ctx.fillText(name,W/2,20)}
 return stats}
@@ -60,12 +59,13 @@ for(var id in monsters){
 var m=monsters[id];
 if(!m.path||!m.path.length)continue;
 var sc=m.size/40;
-ctx.save();ctx.translate(m.x,m.y);ctx.scale(sc,sc);ctx.translate(-120,-120);
+// Compute centroid of path to center shape
+var pcx=0,pcy=0;for(var i=0;i<m.path.length;i++){pcx+=m.path[i][0]*12;pcy+=m.path[i][1]*12}pcx/=m.path.length;pcy/=m.path.length;
+ctx.save();ctx.translate(m.x,m.y);ctx.scale(sc,sc);
 ctx.fillStyle=m.color;ctx.beginPath();
-ctx.moveTo(m.path[0][0]*12,m.path[0][1]*12);
-for(var i=1;i<m.path.length;i++)ctx.lineTo(m.path[i][0]*12,m.path[i][1]*12);
-ctx.closePath();ctx.fill();
-ctx.strokeStyle='#000';ctx.lineWidth=3;ctx.stroke();
+ctx.moveTo((m.path[0][0]*12-pcx),(m.path[0][1]*12-pcy));
+for(var i=1;i<m.path.length;i++)ctx.lineTo((m.path[i][0]*12-pcx),(m.path[i][1]*12-pcy));
+ctx.closePath();ctx.fill('nonzero');
 ctx.restore();
 ctx.fillStyle='#fff';ctx.font='bold '+Math.max(10,Math.round(12*sc))+'px sans-serif';ctx.textAlign='center';ctx.textBaseline='middle';
 ctx.fillText(Math.ceil(m.hp),m.x,m.y);
@@ -77,9 +77,11 @@ var s=drawMonster();if(!s){document.getElementById('drawStatus').textContent='Dr
 ws.send(JSON.stringify({t:'monster',m:s}));isReady=true;done.style.display='none';unready.style.display='inline-block';document.getElementById('drawStatus').textContent='Ready! Waiting for others...'};
 unready.onclick=function(){
 ws.send(JSON.stringify({t:'unready'}));isReady=false;unready.style.display='none';done.style.display='inline-block';document.getElementById('drawStatus').textContent='Draw your monster'};
-function onDown(e){if(isReady)return;var r=c.getBoundingClientRect(),sx=W/r.width,sy=H/r.height;var px=(e.touches?e.touches[0].clientX:e.clientX)-r.left,py=(e.touches?e.touches[0].clientY:e.clientY)-r.top;path=[{x:px*sx,y:py*sy}]}
+function clamp(v,lo,hi){return Math.max(lo,Math.min(hi,v))}
+function getXY(e){var r=c.getBoundingClientRect(),sx=W/r.width,sy=H/r.height;var px=(e.touches?e.touches[0].clientX:e.clientX)-r.left,py=(e.touches?e.touches[0].clientY:e.clientY)-r.top;return{x:clamp(px*sx,5,W-5),y:clamp(py*sy,5,H-5)}}
+function onDown(e){if(isReady)return;var p=getXY(e);path=[p]}
 function smooth(p){for(var k=0;k<2;k++){var n=[];for(var i=0;i<p.length;i++){var a=p[i-1]||p[0],b=p[i],cc=p[i+1]||p[p.length-1];n.push({x:(a.x+b.x*2+cc.x)/4,y:(a.y+b.y*2+cc.y)/4})}p=n}return p}
-function onMove(e){if(path.length===0||isReady)return;var r=c.getBoundingClientRect(),sx=W/r.width,sy=H/r.height;var px=(e.touches?e.touches[0].clientX:e.clientX)-r.left,py=(e.touches?e.touches[0].clientY:e.clientY)-r.top;path.push({x:px*sx,y:py*sy});var draw=smooth(path.slice());var ctx=c.getContext('2d');ctx.fillStyle='#1a1a24';ctx.fillRect(0,0,W,H);ctx.fillStyle='rgba(106,76,147,.5)';ctx.beginPath();ctx.moveTo(draw[0].x,draw[0].y);for(var i=1;i<draw.length;i++)ctx.lineTo(draw[i].x,draw[i].y);ctx.closePath();ctx.fill();ctx.strokeStyle='#8a6cb8';ctx.lineWidth=3;ctx.stroke()}
+function onMove(e){if(path.length===0||isReady)return;var p=getXY(e);path.push(p);var draw=smooth(path.slice());var ctx=c.getContext('2d');ctx.fillStyle='#1a1a24';ctx.fillRect(0,0,W,H);ctx.fillStyle='rgba(106,76,147,.5)';ctx.beginPath();ctx.moveTo(draw[0].x,draw[0].y);for(var i=1;i<draw.length;i++)ctx.lineTo(draw[i].x,draw[i].y);ctx.closePath();ctx.fill('nonzero');ctx.strokeStyle='#8a6cb8';ctx.lineWidth=3;ctx.stroke()}
 function onUp(){if(path.length<10||isReady)return;path=smooth(path);drawMonster()}
 c.addEventListener('touchstart',function(e){e.preventDefault();onDown(e)});
 c.addEventListener('touchmove',function(e){e.preventDefault();onMove(e)});
